@@ -1134,8 +1134,14 @@ sub find {
             $from{"category as c"} = 1;
             push(@where, 's.story_id = sc.story_id');
             push(@where, 'sc.category_id = c.category_id');
-            push(@where, 'c.site_id = ?', 'sc.ord = 0');
-            push(@param, $value);
+            if (ref $args{$key} eq 'ARRAY') {
+                push(@where,
+                     'c.site_id IN (' . join(',', ('?') x @{$args{$key}}) . ')');
+                push(@param, @{$args{$key}});
+            } else {
+                push(@where, 'c.site_id = ?', 'sc.ord = 0');
+                push(@param, $value);
+            }
             next;
         }
 
